--- a/backend/package.json
+++ b/backend/package.json
@@ -3,5 +3,15 @@
     "cors": "^2.8.5",
     "dotenv": "^17.0.1",
     "express": "^5.1.0"
-  }
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.10"
+  },
+  "scripts": {
+  "start": "node index.js",
+  "dev": "nodemon index.js"
+  
+}
+  
 }
